update serilog format

--- a/appsettings.json
+++ b/appsettings.json
@@ -5,5 +5,44 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
-}
+
+  "AllowedHosts": "*",
+
+   "Serilog": {
+    "Using": [ "Serilog.Sinks.Console","Serilog.Sinks.File", "Serilog.Sinks.Elasticsearch" ],
+    "MinimumLevel": {
+      "Default": "Information",
+       "Override": {
+        "Microsoft": "Warning",
+        "System": "Warning"
+    },
+    "Enrich": [ "FromLogContext", "WithMachineName", "WithEnvironmentName", "WithProcessId", "WithThreadId" ],
+    "WriteTo": [
+      {
+        "Name": "Console",
+        "Args": {
+          "outputTemplate": "[{Timestamp:HH:mm:ss} {Level:u3}] {Message:lj} {Properties:j}{NewLine}"
+        }
+      },
+      {
+        "Name": "File",
+        "Args": {
+          "path": "logs/log.txt",
+          "rollingInterval": "Day",
+          "outputTemplate": "{Timestamp:yyyy-MM-dd HH:mm:ss} [{Level}] {Message}{NewLine}{Exception}"
+        }
+      },
+      {
+        "Name": "Elasticsearch",
+        "Args": {
+          "nodeUris": "http://localhost:9200",
+          "autoRegisterTemplate": true,
+          "indexFormat": "logging-api-{0:yyyy.MM.dd}"
+        }
+      }
+    ],
+    "Properties": {
+      "Application": "LoggingAPI"
+    }
+  }
+   }}
