--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -4,5 +4,20 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  
+  "Serilog": {
+    "MinimumLevel": {
+      "Default": "Debug"
+    },
+    "WriteTo": [
+      {
+        "Name": "Console",
+        "Args": {
+          "outputTemplate": "[{Timestamp:HH:mm:ss} {Level:u3}] {Message:lj} {Properties}{NewLine}{Exception}"
+        }
+      }
+    ]
   }
+
 }
