--- a/appsettings.json
+++ b/appsettings.json
@@ -36,8 +36,13 @@
         "Name": "Elasticsearch",
         "Args": {
           "nodeUris": "http://localhost:9200",
+          "indexFormat": "logging-api-{0:yyyy.MM.dd}",
           "autoRegisterTemplate": true,
-          "indexFormat": "logging-api-{0:yyyy.MM.dd}"
+          "overwriteTemplate": true,
+          "detectElasticsearchVersion": true,
+          "templateName": "serilog-events-template",
+          "numberOfShards": 1,
+          "numberOfReplicas": 1
         }
       }
     ],
