--- a/appsettings.json
+++ b/appsettings.json
@@ -37,7 +37,7 @@
         "Args": {
           "nodeUris": "http://localhost:9200",
           "indexFormat": "logging-api-{0:yyyy.MM.dd}",
-          "autoRegisterTemplate": true,
+          "autoRegisterTemplate": false,
           "overwriteTemplate": true,
           "detectElasticsearchVersion": true,
           "templateName": "serilog-events-template",
