JWT + new endpoint /search

--- a/appsettings.json
+++ b/appsettings.json
@@ -50,4 +50,14 @@
       "Application": "LoggingAPI"
     }
   }
-   }}
+   },
+  
+    "Jwt": {
+      "Key": "mysuperlongsupersecuresecretkey1234567890", 
+      "Issuer": "LoggingAPI",
+      "Audience": "LoggingAPIUsers",
+      "ExpiryMinutes": 60
+    }
+  }
+    
+  
